[package]
name = "soroban-env-verification"
version.workspace = true
edition = "2021"
rust-version = "1.67"

[dependencies]
# soroban-native-sdk-macros = { workspace = true }
soroban-env-common = { workspace = true }
# static_assertions = "1.1.0"
# hex = "0.4.3"
# num-traits = "0.2.15"
# num-integer = "0.1.45"
# num-derive = "0.3.3"
# tinyvec = { version = "1.6.0", features = ["alloc"] }
# dyn-fmt = "0.3.0"
# log = "0.4.17"
# backtrace = "0.3"

# [dev-dependencies]
# optimization = "0.2.0"
# env_logger = "0.9.0"
# log = "0.4.17"
# tracking-allocator = "0.4.0"
# tabwriter = "1.2.1"
# thousands = "0.2.0"
# # NB: this must match the same rand version used by ed25519-dalek above
# rand = "0.7.3"
# bytes-lit = "0.0.4"
# textplots = "0.8.0"
# wasmprinter = "0.2.41"
# expect-test = "1.4.0"

[features]
# vm = ["wasmi", "soroban-env-common/vm"]
# hostfn_log_fmt_values = []
# serde = ["soroban-env-common/serde"]
# testutils = ["soroban-env-common/testutils"]

# [target.'cfg(target_os = "linux")'.dev-dependencies]
# perf-event = "0.4.7"

# [package.metadata.docs.rs]
# all-features = true
